--- a/frontend/src/styles/Header.css
+++ b/frontend/src/styles/Header.css
@@ -7,6 +7,7 @@
 
 body {
   background: #515050;
+  background-position-y: 50%;
   font-family: "Poppins";
   margin: 0;
   padding: 0;
@@ -19,19 +20,26 @@ a {
 header {
   padding: 2em;
   position: relative;
+  height: 110px;
+  background: #646060;
 }
 
 header .container {
   display: flex;
   align-items: center;
   width: 100%;
-  height: 4em;
+  height: 3em;
 }
 
 .logo {
   color: white;
   font-size: 1.2rem;
   font-weight: bold;
+  font-family: "Poppins";
+}
+
+.logo span {
+  color: #c9a527;
 }
 
 .home-menu {
@@ -68,9 +76,9 @@ header .container {
 }
 
 .search-header .search {
-  width: 230px;
+  width: 370px;
   height: 51px;
-  background: #3c3737;
+  background: #544f4f;
   display: flex;
   align-items: center;
   padding-left: 0.5em;
@@ -78,7 +86,7 @@ header .container {
   border-radius: 10px;
   margin-left: 1.6em;
   border: none;
-  padding-left: 2.5em;
+  padding-left: 1.3em;
   font-size: 14px;
   color: white;
 }
@@ -88,8 +96,8 @@ header .container {
   height: 20px;
   display: flex;
   align-items: center;
-  margin-left: 2.1em;
-  margin-top: 1.1em;
+  left: 22em;
+  top: 1em;
   position: absolute;
 }
 
@@ -97,14 +105,14 @@ header .container {
   margin-left: auto;
   margin-right: 14em;
   display: flex;
-  width: 20%;
+  width: 15%;
   justify-content: space-around;
 }
 
 .icon-wrapper {
   width: 51px;
   height: 51px;
-  background-color: #615f5f;
+  /* background-color: #615f5f; */
   border-radius: 50%;
   display: flex;
   align-items: center;
@@ -122,6 +130,7 @@ header .container {
 
 .create-post-icon {
   cursor: pointer;
+  margin-top: 0.5em;
 }
 
 .notification-icon {
@@ -157,11 +166,11 @@ header .container {
 .count {
   color: var(--color);
   position: absolute;
-  top: -9px;
-  right: 1px;
+  top: -7px;
+  right: 0.4px;
   background: #ff4500;
-  width: 0.7em;
-  height: 0.7em;
+  width: 0.9em;
+  height: 0.9em;
   border-radius: 50%;
   text-align: center;
   display: flex;
@@ -172,38 +181,77 @@ header .container {
 
 .icon p {
   color: white;
-  font-size: 1rem;
+  font-size: 0.8rem;
+  font-family: sans-serif;
   font-weight: bold;
 }
 
 .user-auth {
   /* background: red; */
   position: absolute;
-  right: 2em;
+  right: 5em;
+  top: 1.5em;
   display: flex;
   align-items: center;
 }
 
 .profile-picture {
-  width: 45px;
-  height: 45px;
-  background: white;
+  width: 40px;
+  height: 40px;
+  background-image: url("../images/1-post.jpg");
+  background-size: cover;
   border-radius: 50%;
   margin-right: 1em;
+  margin-left: 0.6em;
+  margin-top: 0.5em;
+}
+
+.pf-op-icon {
+  margin-top: 0.2em;
+  position: absolute;
+  right: -1.5em;
+  top: -0.1em;
 }
 
 .profile-info p {
+  margin-left: -0.5em;
+  margin-right: 0.5em;
   color: white;
 }
 
-/* .profile-info .logout {
-  display: none;
-} */
+.login {
+  color: rgb(7, 194, 7);
+  font-size: 16px;
+  /* font-weight: bold; */
+  font-family: "Poppins";
+  display: inline-block;
+  margin-top: 0.6em;
+}
+
+.profile-info .user-setting {
+  position: absolute;
+  background: #2d2d39;
+  width: 235px;
+  right: -0.5em;
+  top: 5.5em;
+  z-index: 999999;
+  color: black;
+  border-radius: 22px;
+}
+
+.user-setting p {
+  margin-left: 3em;
+}
+
+.user-setting p:hover {
+  background: #353541;
+}
 
 .home-drop-down {
-  width: 225px;
-  max-height: 500px;
-  overflow: hidden;
+  width: 268px;
+  max-height: 465px;
+  overflow-y: auto;
+  scrollbar-width: none;
   position: absolute;
   background: #716c6c;
   z-index: 999;
@@ -225,21 +273,26 @@ header .container {
   letter-spacing: 0.1rem;
   display: flex;
   align-items: center;
-  margin-top: -1.5em;
+  margin-top: -1em;
   font-size: 15px;
 }
 
 .home-drop-down .create-community .plus {
-  font-size: 52px;
+  font-size: 32px;
   font-weight: 10px;
 }
 
 .home-drop-down .all-communities {
-  margin-left: 1em;
+  margin-left: 0.5em;
   font-size: 15px;
-  margin-top: -2em;
+  margin-top: -1em;
   max-height: 300px;
-  overflow-y: scroll;
+  overflow-y: auto;
+  scrollbar-width: none;
+}
+
+.home-drop-down .all-communities::-webkit-scrollbar {
+  display: none;
 }
 
 .home-drop-down .all-communities .community {
@@ -250,7 +303,7 @@ header .container {
 }
 
 .feeds {
-  margin-left: 1em;
+  margin-left: 0.5em;
   font-size: 15px;
   /* margin-top: -2em; */
   max-height: 300px;
@@ -279,5 +332,73 @@ header .container {
 .feeds .popular {
   font-size: 15px;
   margin-top: 0.5em;
-  color: rgb(209, 198, 198);
+  color: rgb(17, 229, 17);
+  cursor: pointer;
+}
+
+.popular-community {
+  font-size: 15px;
+  max-height: 305px;
+}
+
+.home-drop-down .popular-community .community {
+  display: block;
+  margin-bottom: 0.5em;
+  color: rgb(228, 212, 212);
+  font-family: "Poppins";
+}
+
+.message-notification {
+  width: 368px;
+  height: 465px;
+  background: #393947;
+  position: absolute;
+  z-index: 999999;
+  top: 6em;
+  right: 21em;
+  border-radius: 50px;
+}
+
+.recent-messages .user-recent-message {
+  display: flex;
+  align-items: center;
+  position: relative;
+  padding-right: 2em;
+}
+
+.user-recent-message:hover {
+  background: #6a6a7b;
+}
+
+.recent-message-content {
+  margin-bottom: -1em;
+}
+
+.recent-m-u-name {
+  margin-bottom: -1em;
+}
+
+.recent-pp {
+  width: 44px;
+  height: 44px;
+  margin-top: 1em;
+}
+
+.recent-m-u-name {
+  color: white;
+  font-family: "IBM+Plex+Sans";
+  text-transform: capitalize;
+}
+
+.recent-m-c {
+  color: rgb(142, 135, 135);
+  font-size: 14px;
+}
+
+.recent-messages .user-recent-message .r-d-f {
+  font-size: 12px;
+}
+
+.not_read {
+  background: red;
 }
